kubernetes/apps/media/overseerr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
      app.kubernetes.io/instance: overseerr
      app.kubernetes.io/controller: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
        app.kubernetes.io/instance: overseerr
        app.kubernetes.io/controller: overseerr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/sct/overseerr:1.35.0
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /api/v1/status
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 50m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr
        - name: tmp
          emptyDir: {}
