kubernetes/apps/media/overseerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/controller: overseerr
