kubernetes/apps/media/overseerr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - overseerr.unscfleet.com
    - requests.unscfleet.com
  rules:
    - backendRefs:
        - name: overseerr
          port: 80
